--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -9,7 +9,10 @@
   "author": "spasiu",
   "license": "ISC",
   "dependencies": {
+    "@slack/client": "^3.8.1",
+    "@slack/events-api": "^1.0.0-beta.2",
     "body-parser": "1.15.2",
+    "dotenv": "^4.0.0",
     "express": "4.14.0",
     "smooch-core": "2.1.1"
   }
